Egin dena: +Artikuluen nabigazio orria konpondu da guztieta +Falta ziren artikuluak idatzi dira eta beraien kapturak igota +Sartu beharreko komanduak <pre><code> atal batean sartu dira
Egin behar dena:
-Orriaren goiko nabigazioa konpondu
-FTP artikulua idatzi eta amaitu
-Footerra konpondu
-Responsive egin
-Komentarioak jarri beharrezko ataletan eta CSS-an

--- a/DNS.html
+++ b/DNS.html
@@ -29,14 +29,17 @@
             </header>
             <div class="center">
                 <div class="pagination">
-                    <a href="Debian.html">«</a>
-                    <a href="FreeNas2.html" >FreeNas</a>
-                    <a href="Proxmox.html">Proxmox</a>
-                    <a href="Debian.html">Debian</a>
-                    <a href="DNS.html"class="active">DNS</a>
+                    <a href="FreeNas2.html">«</a>
+                    <a href="Ubuntu.html">Ubuntu</a>
                     <a href="SSH.html">SSH</a>
                     <a href="FTP.html">FTP</a>
-                    <a href="SSH.html">»</a>
+                    <a href="Proxmox.html">Proxmox</a>
+                    <a href="GitHub.html">GitHub</a>
+                    <a href="FreeNas2.html">FreeNas</a>
+                    <a href="DNS.html" class="active">DNS</a>
+                    <a href="Debian.html">Debian</a>
+                    <a href="ApacheEtaMysql.html">Apache eta MySql</a>
+                    <a href="Debian.html">»</a>
                 </div>
             </div>
             <!-- Artikuluak -->
