--- a/Debian.html
+++ b/Debian.html
@@ -29,14 +29,17 @@
             </header>
             <div class="center">
                 <div class="pagination">
-                    <a href="Proxmox.html">«</a>
-                    <a href="FreeNas2.html" >Free Nas</a>
-                    <a href="Proxmox.html">Proxmox</a>
-                    <a href="Debian.html" class="active">Debian</a>
-                    <a href="DNS.html">DNS</a>
+                    <a href="DNS.html">«</a>
+                    <a href="Ubuntu.html">Ubuntu</a>
                     <a href="SSH.html">SSH</a>
                     <a href="FTP.html">FTP</a>
-                    <a href="DNS.html">»</a>
+                    <a href="Proxmox.html">Proxmox</a>
+                    <a href="GitHub.html">GitHub</a>
+                    <a href="FreeNas2.html">FreeNas</a>
+                    <a href="DNS.html">DNS</a>
+                    <a href="Debian.html" class="active">Debian</a>
+                    <a href="ApacheEtaMysql.html">Apache eta MySql</a>
+                    <a href="ApacheEtaMysql.html">»</a>
                 </div>
             </div>
 
@@ -56,11 +59,8 @@
                             gainera, software libre batean dago oinarrituta. Ubuntu bezalako distribuzio ezagunak sistema eragile honetan 
                             oinarritu zen etaedozein lekutan erabili daiteke, bai ordenagailuan, etxean zerbitzari batean, bulegoan,  
                             eta fabrikatzailean baita ere.</p>
-                        <h3>NOLA FUNTZIONATZEN DU?</h3>
-                        <img src="Media/Fotis/talde3 - Proxmox Virtual Environment - Google Chrome 20_10_2020 12_39_22.png" width="60%"><br>
-                        <img src="Media/Fotis/talde3 - Proxmox Virtual Environment - Google Chrome 20_10_2020 12_57_34.png" width="60%">
                         <h3>NOLA DESKARGATU DEZAKET?</h3>
-                        <p>Prestatzen ari garen zerbitzaria proxmoxen bidez desplegatuko dugunez, Debianen oinarritutako VM bat sortzeko pausuak azalduko dizuegu:</p>
+                        <p>&nbsp&nbspPrestatzen ari garen zerbitzaria proxmoxen bidez desplegatuko dugunez, Debianen oinarritutako VM bat sortzeko pausuak azalduko dizuegu hurrengo ISO-ak erabiliz:</p>
                             <p>&nbsp&nbsp• &nbsp Informazio gehiagorako Debianen dokumentazioa irakurtzea gomendatzen dizuegu:</p>
                                 <p><a href="https://www.debian.com/doc/">https://www.debian.com/doc/</a></p>
                     </div>
