--- a/FTP.html
+++ b/FTP.html
@@ -30,13 +30,16 @@
             <div class="center">
                 <div class="pagination">
                     <a href="SSH.html">«</a>
-                    <a href="FreeNas2.html" >Free Nas</a>
-                    <a href="Proxmox.html">Proxmox</a>
-                    <a href="Debian.html">Debian</a>
-                    <a href="DNS.html">DNS</a>
+                    <a href="Ubuntu.html">Ubuntu</a>
                     <a href="SSH.html">SSH</a>
-                    <a href="FTP.html"class="active">FTP</a>
-                    <a href="FreeNas2.html">»</a>
+                    <a href="FTP.html" class="active">FTP</a>
+                    <a href="Proxmox.html">Proxmox</a>
+                    <a href="GitHub.html">GitHub</a>
+                    <a href="FreeNas2.html">FreeNas</a>
+                    <a href="DNS.html">DNS</a>
+                    <a href="Debian.html">Debian</a>
+                    <a href="ApacheEtaMysql.html">Apache eta MySql</a>
+                    <a href="Proxmox.html">»</a>
                 </div>
             </div>
             <!-- Artikuluak -->
