--- a/Proxmox.html
+++ b/Proxmox.html
@@ -30,15 +30,17 @@
         <div>
             <div class="center">
                 <div class="pagination">
-                    <a href="FreeNas2.html">«</a>
-                    <a href="FreeNas2.html">Free Nas</a>
-                    <a href="Proxmox.html" class="active">Proxmox</a>
-                    <a href="Debian.html">Debian</a>
-                    
-                    <a href="DNS.html">DNS</a>
+                    <a href="FTP.html">«</a>
+                    <a href="Ubuntu.html">Ubuntu</a>
                     <a href="SSH.html">SSH</a>
                     <a href="FTP.html">FTP</a>
-                    <a href="Debian.html">»</a>
+                    <a href="Proxmox.html" class="active">Proxmox</a>
+                    <a href="GitHub.html">GitHub</a>
+                    <a href="FreeNas2.html">FreeNas</a>
+                    <a href="DNS.html">DNS</a>
+                    <a href="Debian.html">Debian</a>
+                    <a href="ApacheEtaMysql.html">Apache eta MySql</a>
+                    <a href="GitHub.html">»</a>
                 </div>
             </div>
             <div class="center2">
@@ -52,7 +54,7 @@
                 <div class="articulo1">
                     <h1>PROXMOX</h1>
                         <h3>DESKRIBAPENA</h3>
-                        <p>&nbsp&nbspProxmox Bare-Metal plataforma bat da, eta zuzenean instalatzen da zerbitzari fisikoan, hardwarea ahalik eta gehien aprobetxatzeko <b>makina birtualak sortzeko eta kudeatzeko</b>.
+                        <p>&nbsp&nbspProxmox Bare-Metal plataforma bat da, eta zuzenean instalatzen da zerbitzari fisikoan, hardwarea ahalik eta gehien aprobetxatzeko makina birtualak sortzeko eta kudeatzeko.
                         </p>
                         
                         <h4>Funtzioak</h4>
