--- a/Proxmox2.html
+++ b/Proxmox2.html
@@ -29,15 +29,17 @@
         <div>
             <div class="center">
                 <div class="pagination">
-                    <a href="FreeNas2.html">«</a>
-                    <a href="FreeNas2.html" >Free Nas</a>
-                    <a href="Proxmox.html"class="active">Proxmox</a>
-                    <a href="Debian.html">Debian</a>
-                    <a href="DNS.html">DNS</a>
+                    <a href="FTP.html">«</a>
+                    <a href="Ubuntu.html">Ubuntu</a>
                     <a href="SSH.html">SSH</a>
                     <a href="FTP.html">FTP</a>
-                    
-                    <a href="Debian.html">»</a>
+                    <a href="Proxmox.html" class="active">Proxmox</a>
+                    <a href="GitHub.html">GitHub</a>
+                    <a href="FreeNas2.html">FreeNas</a>
+                    <a href="DNS.html">DNS</a>
+                    <a href="Debian.html">Debian</a>
+                    <a href="ApacheEtaMysql.html">Apache eta MySql</a>
+                    <a href="GitHub.html">»</a>
                 </div>
             </div>
             <div class="center2">
@@ -51,7 +53,7 @@
                 <div class="articulo1">
                     <h1>PROXMOX</h1>
                         <h3>MAKINA BIRTUALAREN INSTALAZIOA</h3>
-                        <p>&nbsp&nbspArtikulu honetan, nola instalatzen den makina birtual bat azalduko da</b>.
+                        <p>&nbsp&nbspArtikulu honetan, Proxmoxen Ubuntu makina birtual bat nola sortzen den azalduko da.</b>
                         </p>
                         <h4>Jarraitzeko pausuak</h4>
                         <ol>
