--- a/Ubuntu.html
+++ b/Ubuntu.html
@@ -18,7 +18,6 @@
                     <div class="fondoNavigation">
                         <div class="navbar">
                             <a href="index.html">HASIERA</a> 
-                            
                             <a href="#">BISITATUENAK</a> 
                             <a href="#">BERRIAK</a>
                             <a class="active" href="FreeNas1.html">ARTIKULUAK</a>
@@ -30,46 +29,38 @@
         <div>
             <div class="center">
                 <div class="pagination">
-                    <a href="GitHub.html">«</a>
-                    <a href="Ubuntu.html">Ubuntu</a>
+                    <a href="ApacheEtaMysql.html">«</a>
+                    <a href="Ubuntu.html" class="active">Ubuntu</a>
                     <a href="SSH.html">SSH</a>
                     <a href="FTP.html">FTP</a>
                     <a href="Proxmox.html">Proxmox</a>
                     <a href="GitHub.html">GitHub</a>
-                    <a href="FreeNas2.html" class="active">FreeNas</a>
+                    <a href="FreeNas2.html">FreeNas</a>
                     <a href="DNS.html">DNS</a>
                     <a href="Debian.html">Debian</a>
                     <a href="ApacheEtaMysql.html">Apache eta MySql</a>
-                    <a href="DNS.html">»</a>
+                    <a href="SSH.html">»</a>
                 </div>
             </div>
             <div class="center2">
             <div class="pagination">
-                <a href="FreeNas2.html">HARDWARE BALDINTZAK</a>
-                <a href="FreeNas3.html">INSTALAZIOA</a>
-                <a href="FreeNas4.html">INST. PROXMOX</a>
-                <a href="Freenas5.html" class="active">SEGURTASUN KOPIAK</a>
+                <a href="Ubuntu.html" class="active">DESKRIBAPENA</a>
+                <a href="Ubuntu2.html">MAKINA BIRTUALA SORTU</a>
             </div>
             </div>
             <!-- Artikuluak -->
             <div class="articulos">
                 <div class="articulo1">
-                    <h1>FREENAS</h1>
-                        <h3>SEGURTASUN KOPIAK FreeNas-en HELBIDEA ERABILIZ</h3>
-                            <p>&nbspFreeNAS-a instalatzen amaitu duguneko IP-a jasoko dugu eta helbide hori bilatuko dugu bilatzailean, root erabiltzailea eta lehen instalazioan sartu dugun pasahitza erabiliz FreesNAS-eko aginte-mahaiakin topatuko gara. <br><br>
-                               &nbspGure zerbitzariaren kopiak egiteko hurrengo pausoak jarraituko ditugu:
-                            </p>
-
-                            <img src="Media/FreeNas/Freenas1.PNG" width="70%"><br>
-                            <img src="Media/FreeNas/Freenas2.PNG" width="70%"><br>
-                            <img src="Media/FreeNas/Freenas3.PNG" width="70%"><br>
-                            <img src="Media/FreeNas/Freenas4.PNG" width="70%"><br>
-                            <img src="Media/FreeNas/Freenas5.PNG" width="70%"><br>
-                            <img src="Media/FreeNas/Freenas6.PNG" width="70%"><br>
-                            <img src="Media/FreeNas/Freenas7.PNG" width="70%"><br>
-                            
-                            <p>&nbspAzken pausu hau amaitzerakoan, gure zerbitzariaren segurtasun kopia amaituta izango dugu.</p>
-                </div>
+                    <h1>UBUNTU</h1>
+                        <h3>DESKRIBAPENA</h3>
+                        <p>&nbsp&nbspUbuntu GNU/Linux banaketa bat da, eta sistema eragile interesgarria eskaintzen du hezkuntza-arloko mahaigaineko ekipoetarako eta zerbitzarietarako. Debian-en oinarritutako banaketa da, eta ezaugarri nagusiak hauek ditu: erabiltzeko erraztasuna. Ohiko eguneratzeak.</b>
+                        </p>
+                        <h3>NOLA DESKARGATU DEZAKET?</h3>
+                        <p>&nbsp&nbspPrestatzen ari garen zerbitzaria proxmoxen bidez desplegatuko dugunez, Ubuntun oinarritutako VM bat sortzeko pausuak azalduko dizuegu hurrengo ISO-ak erabiliz:</p>
+                        <p><a href="https://ubuntu.com/download/desktop">https://ubuntu.com/download/desktop</a></p>
+                        <p>&nbsp&nbsp• &nbsp Informazio gehiagorako Ubunturen dokumentazioa irakurtzea gomendatzen dizuegu:</p>
+                        <p><a href="https://help.ubuntu.com/">https://help.ubuntu.com/</a></p>
+                    </div>
             </div>
         </div>
         </div>
