--- a/FreeNas3.html
+++ b/FreeNas3.html
@@ -30,13 +30,17 @@
         <div>
             <div class="center">
                 <div class="pagination">
-                    <a href="#">«</a>
-                    <a href="FreeNas2.html" class="active">FreeNas</a>
-                    <a href="Debian.html">Debian</a>
-                    <a href="DNS.html">DNS</a>
+                    <a href="GitHub.html">«</a>
+                    <a href="Ubuntu.html">Ubuntu</a>
                     <a href="SSH.html">SSH</a>
                     <a href="FTP.html">FTP</a>
-                    <a href="Debian.html">»</a>
+                    <a href="Proxmox.html">Proxmox</a>
+                    <a href="GitHub.html">GitHub</a>
+                    <a href="FreeNas2.html" class="active">FreeNas</a>
+                    <a href="DNS.html">DNS</a>
+                    <a href="Debian.html">Debian</a>
+                    <a href="ApacheEtaMysql.html">Apache eta MySql</a>
+                    <a href="DNS.html">»</a>
                 </div>
             </div>
             <div class="center2">
