--- a/GitHub.html
+++ b/GitHub.html
@@ -30,46 +30,57 @@
         <div>
             <div class="center">
                 <div class="pagination">
-                    <a href="GitHub.html">«</a>
+                    <a href="Proxmox.html">«</a>
                     <a href="Ubuntu.html">Ubuntu</a>
                     <a href="SSH.html">SSH</a>
                     <a href="FTP.html">FTP</a>
                     <a href="Proxmox.html">Proxmox</a>
-                    <a href="GitHub.html">GitHub</a>
-                    <a href="FreeNas2.html" class="active">FreeNas</a>
+                    <a href="GitHub.html" class="active">GitHub</a>
+                    <a href="FreeNas2.html">FreeNas</a>
                     <a href="DNS.html">DNS</a>
                     <a href="Debian.html">Debian</a>
                     <a href="ApacheEtaMysql.html">Apache eta MySql</a>
-                    <a href="DNS.html">»</a>
+                    <a href="FreeNas2.html">»</a>
                 </div>
             </div>
             <div class="center2">
             <div class="pagination">
-                <a href="FreeNas2.html">HARDWARE BALDINTZAK</a>
-                <a href="FreeNas3.html">INSTALAZIOA</a>
-                <a href="FreeNas4.html">INST. PROXMOX</a>
-                <a href="Freenas5.html" class="active">SEGURTASUN KOPIAK</a>
+                <a href="GitHub.html" class="active">DESKRIBAPENA eta LEHEN PAUSUAK</a>
+                <a href="GitHub2.html">FUNTZIONAMENDUA</a>
             </div>
             </div>
             <!-- Artikuluak -->
             <div class="articulos">
                 <div class="articulo1">
-                    <h1>FREENAS</h1>
-                        <h3>SEGURTASUN KOPIAK FreeNas-en HELBIDEA ERABILIZ</h3>
-                            <p>&nbspFreeNAS-a instalatzen amaitu duguneko IP-a jasoko dugu eta helbide hori bilatuko dugu bilatzailean, root erabiltzailea eta lehen instalazioan sartu dugun pasahitza erabiliz FreesNAS-eko aginte-mahaiakin topatuko gara. <br><br>
-                               &nbspGure zerbitzariaren kopiak egiteko hurrengo pausoak jarraituko ditugu:
-                            </p>
+                    <h1>GITHUB</h1>
+                        <h3>DESKRIBAPENA</h3>
+                        <p>&nbsp&nbspGitHub kode-bertsioen proiektuak kudeatzeko eta kontrolatzeko sistema bat da, garatzaileentzat diseinatuta dago eta sare sozial plataforma bat da be.<br><br>
+                           &nbsp&nbspBaina zertarako erabiltzen da GitHub? Beno, oro har, mundu osoko beste pertsona batzuekin elkarlanean aritzeko, proiektuak planifikatzeko eta lanaren jarraipena egiteko aukera ematen du.    
+                        </p>
+                        <h3>KONTU BAT EGIN ETA GITHUB-a BINKULATU</h3>
+                        <p>&nbsp&nbspLehenengo kontu bat sortu behar duzu GitHub-ean:<a href="https://github.com/">https://github.com/</a>. <br><br>
+                           &nbsp&nbspKontu bat sortu ondoren, github desktop instalatu behar duzu <a href="https://desktop.github.com/">https://desktop.github.com/</a>. <br><br>
+                           &nbsp&nbspInstalazioa amaitu ondoren, aplikazioa zabaldu eta binkulatu behar duzu kontua. Option lekuan klikatuz. <br><br><br><br><br><br>
+                           <img src="Media/GitHub/github1.PNG" id="argazkiaPausoka"><br>
+                        </p>
+                        <h3>LEHEN PAUSUAK github-ean</h3>
+                        <ol>
 
-                            <img src="Media/FreeNas/Freenas1.PNG" width="70%"><br>
-                            <img src="Media/FreeNas/Freenas2.PNG" width="70%"><br>
-                            <img src="Media/FreeNas/Freenas3.PNG" width="70%"><br>
-                            <img src="Media/FreeNas/Freenas4.PNG" width="70%"><br>
-                            <img src="Media/FreeNas/Freenas5.PNG" width="70%"><br>
-                            <img src="Media/FreeNas/Freenas6.PNG" width="70%"><br>
-                            <img src="Media/FreeNas/Freenas7.PNG" width="70%"><br>
-                            
-                            <p>&nbspAzken pausu hau amaitzerakoan, gure zerbitzariaren segurtasun kopia amaituta izango dugu.</p>
-                </div>
+                            <li><b>Sortu</b>, errepositorio berriak gehituz:
+                                <ul>
+                                    <li>Errepositorio berri bat sortu dezakezu <i>file</i> botoian klikatuz eta ondoren, errepositorio berria sortu botoian sakatuz.
+                                    </li>
+                                </ul>
+                            </li>
+                            <li><b>Dagoeneko sortuta</b> dagoen proiektu batekin lan egiteko:
+                                <ul>
+                                    <li>Errepositorioa klonatu beharko duzu, <i>file</i> botoian sakatuz, eta ondoren <i>clone repository</i>-n klik eginez.
+                                    </li>
+                                </ul>
+                            </li>
+
+                        </ol>
+                    </div>
             </div>
         </div>
         </div>
