Logoa hasiera orrira eramaten du

--- a/Galderak.html
+++ b/Galderak.html
@@ -16,12 +16,11 @@
         <header class="header">
             <div class="container">
                 <!-- Hemen logoa txertatu behar da -->
-                <img class="logo" src="Media/Logo.png" alt="Wiki Server">
+                <a href="index.html"><img class="logo" src="Media/Logo.png" alt="Wiki Server"></a>
                 <!-- Nabigatzailea, bakoitzak beraren orria kargatuko du -->
                 <div class="fondoNavigation">
                         <div class="navbar">
-                            <a href="index.html">HASIERA</a> 
-                            
+                            <a href="index.html">HASIERA</a>       
                             <a href="#">BISITATUENAK</a> 
                             <a href="#">BERRIAK</a>
                             <a href="FreeNas2.html">ARTIKULUAK</a>
@@ -42,7 +41,7 @@
                 <!-- Erantzuna -->
                 <div class="erantzuna">
                     <h1>Erantzuna:</h1>
-                    <p><b>Hardwar osagaiak: </b>
+                    <p><b>Hardware osagaiak: </b>
                         Gutxienez behar izango ditugu, Interneteko konexioarekiko bideratzailea (router), zerbitzari weba eta RJ45 sare kableatzea bideratzailea gure ordenagailuarekin konektatzeko ordezkatzen dituen ordenagailua. 
                         
                         <br><b>Osagai softwareak:</b> Windows Sistema Eragileak edo Linux-ek eta zerbitzaria programatzen duen Apache Server. Web-orri-edizioa egin ahal izateko: Dreamweaver (ordainketako) edo Joomla, WordPress (doakoa), VS Code...
