--- a/SSH.html
+++ b/SSH.html
@@ -13,14 +13,12 @@
             <header class="header">
                 <div class="container">
                     <!-- Hemen logoa txertatu behar da -->
-                    <img class="logo" src="Media/Logo.png" alt="Wiki Server">
+                    <a href="index.html"><img class="logo" src="Media/Logo.png" alt="Wiki Server"></a>
                     <!-- Nabigatzailea, bakoitzak beraren orria kargatuko du -->
                     <div class="fondoNavigation">
                         <div class="navbar">
                             <a href="index.html">HASIERA</a> 
-                            <a href="#">EGUNERATUAK</a> 
                             <a href="#">BISITATUENAK</a> 
-                            <a href="#">BERRIAK</a>
                             <a class="active" href="FreeNas1.html">ARTIKULUAK</a>
                             <a href="Galderak.html">FAQ</a>
                         </div>
