--- a/index copy.html
+++ b/index copy.html
@@ -13,7 +13,7 @@
     <header class="header">
         <div class="container">
             <!-- Hemen logoa txertatu behar da -->
-            <img class="logo" src="Media/Logo.png" alt="Wiki Server">
+            <a href="index.html"><img class="logo" src="Media/Logo.png" alt="Wiki Server"></a>
             <!-- Nabigatzailea, bakoitzak beraren orria kargatuko du -->
             <div class="fondoNavigation">
                     <div class="navbar">
