--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <!-- Artikuluen zatia -->
         <div class="articulos">
             <div class="articulo1">
-                <h1>Nor gara?</h1>
+                <h1>Nortzuk gara?</h1>
                     <p>Kaixo! Web orrialde bat daukazu eta serbitzari bar behar duzu ikusi ahal izateko?
                     ServerWiki, 4 gazteek zuzendutako enpresa bat da zerbitzu hau eskaintzen duena.
                     Are gehiago, zerbitzari bat montatu nahi baduzu, web horrialde honetan aurkeztuko dizugu pausuz pausu nola sortu bat. Prest zaude?
