Orriaren goiko nabigazioa konpondu.

--- a/Bistaratuenak.html
+++ b/Bistaratuenak.html
@@ -20,9 +20,8 @@
             <!-- Nabigatzailea, bakoitzak beraren orria kargatuko du -->
             <div class="fondoNavigation">
                     <div class="navbar navbar-expand-lg">
-                        <a href="#">HASIERA</a> 
-                        <a href="#">BISITATUENAK</a> 
-                        <a href="#">BERRIAK</a>
+                        <a href="index.html">HASIERA</a> 
+                        <a href="Bistaratuenak.html" class="active">BISITATUENAK</a> 
                         <a href="FreeNas2.html">ARTIKULUAK</a>
                         <a href="Galderak.html">FAQ</a>
                     </div>
