--- a/Galderak2.html
+++ b/Galderak2.html
@@ -19,13 +19,12 @@
                 <a href="index.html"><img class="logo" src="Media/Logo.png" alt="Wiki Server"></a>
                 <!-- Nabigatzailea, bakoitzak beraren orria kargatuko du -->
                 <div class="fondoNavigation">
+                    <div class="fondoNavigation">
                         <div class="navbar">
-                            <a href="index.html">HASIERA</a> 
-                            
-                            <a href="#">BISITATUENAK</a> 
-                            <a href="#">BERRIAK</a>
+                            <a href="index.html">HASIERA</a>       
+                            <a href="Bistaratuenak.html">BISITATUENAK</a> 
                             <a href="FreeNas2.html">ARTIKULUAK</a>
-                            <a class="active" href="Galderak.html">FAQ</a>
+                            <a href="Galderak.html" class="active">FAQ</a>
                         </div>
                 </div>
             </div>
