--- a/Proxmox2.html
+++ b/Proxmox2.html
@@ -18,8 +18,7 @@
                     <div class="fondoNavigation">
                         <div class="navbar">
                             <a href="index.html">HASIERA</a> 
-                            <a href="#">BISITATUENAK</a> 
-                            <a href="#">BERRIAK</a>
+                            <a href="Bistaratuenak.html">BISITATUENAK</a>
                             <a class="active" href="FreeNas1.html">ARTIKULUAK</a>
                             <a href="Galderak.html">FAQ</a>
                         </div>
